# earth_33

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
agents/: aco_agent.py  base.py  gwo_agent.py  heuristic_agent.py  hf_agent.py  llm_agent.py  pso_agent.py  random_agent.py  swarm_base.py  woa_agent.py
cli/: __main__.py  evaluate.py  replay.py  run_episode.py
config_io/: config.py  schema.py  utils.py
configs/: desert.yaml  forest.yaml  hunt.yaml  tundra.yaml
data/: ingest.py  tiles.py
docs/: agents.md  architecture.md  cli-reference.md  configuration.md  game-mechanics.md
eval/: metrics.py  runner.py
examples/: demo_gwo_forest.json
render/: palettes.py  pygame_renderer.py
runs/: 20260218_011335_seed42.json  20260218_011413_seed42.json  20260218_011423_seed42.json  20260218_011447_seed42.json  20260218_011453_seed42.json  20260218_011501_seed42.json  20260218_012705_seed42.json  20260218_012817_seed42.json  20260218_013315_seed42.json  20260218_114554_seed42.json  20260218_114627_seed42.json  20260218_115032_seed42.json  20260218_115208_seed42.json  20260219_001132_seed42.json  20260219_003917_seed42.json  20260219_004034_seed42.json  20260219_004146_seed42.json  20260219_004327_seed42.json  20260221_121543_seed42.json  20260221_125457_seed42.json  20260221_130513_seed42.json  20260221_130957_seed42.json  20260221_132638_seed42.json  20260221_132918_seed42.json  20260221_133451_seed42.json  20260221_133501_seed42.json  20260221_133509_seed42.json  20260221_172504_seed42.json  20260221_172527_seed42.json  20260221_172553_seed42.json  (+14 more)
(+81 files in other folders)
