[project]
name = "earth-33"
version = "0.1.0"
description = "Earth2D Survival — LLM-as-Organism in Realistic 2D Earth Environments"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pygame>=2.5",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
llm-openai = ["openai>=1.0"]
llm-anthropic = ["anthropic>=0.20"]
recording = ["imageio>=2.9", "imageio-ffmpeg>=0.4"]
geo = ["rasterio>=1.3", "xarray>=2024.1"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
